welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: illegal start of simple expression
	var T:Array[Int]=[1]
                         ^